Fix resizer overlaps editor scroller.

--- a/packages/rekit-studio/src/features/home/OutlineResizer.less
+++ b/packages/rekit-studio/src/features/home/OutlineResizer.less
@@ -6,7 +6,7 @@
   z-index: 9999;
   right: 200px;
   bottom: 0;
-  width: 10px;
+  width: 0;
   overflow: visible;
   background-color: rgba(0, 0, 0, 0);
 
